welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: not found: value len
  var n : Int = len(nums)
                ^